syntax = "proto3";

package protobuf;

option go_package = "/proto";

import "google/api/annotations.proto";

service AuthService {
  //registration
  rpc SignUp (SignUpRequest) returns (SignUpResponse){}

  //authentication
  rpc SignIn (SignInRequest) returns (SignInResponse){}

  //operation with user
  rpc GetUserById (GetUserByIdRequest) returns (GetUserByIdResponse){}

  rpc DeleteUserById (DeleteUserByIdRequest) returns (DeleteUserByIdResponse){}

  rpc UpdateUser (UpdateUserRequest) returns (UpdateUserResponse){}

  rpc GetAllUsers (GetAllUsersRequest) returns (GetAllUsersResponse){}

}

// SIGNUP
message SignUpRequest {
  User user = 1;
}

message SignUpResponse {
  int64 slug = 1;
}

// SIGNIN
message SignInRequest {
  string login = 1;
  string password = 2;
}

message SignInResponse {
  User user = 1;
}

// GET USER
message GetUserByIdRequest {
  int64 slug = 1;
}

message GetUserByIdResponse {
  User user = 1;
}

// DELETE USER
message DeleteUserByIdRequest {
  int64 slug = 1;
}

message DeleteUserByIdResponse {
  string resp = 1;
}

// UPDATE USER

message UpdateUserRequest{
  User user = 1;
}

message UpdateUserResponse{
  string resp = 1;
}

// GET USERS
message GetAllUsersRequest{}

message GetAllUsersResponse{
  repeated User user = 1;
}

message User{
  int64 slug = 1;
  string login = 2;
  string password = 3;
  string username = 4;
  int64 userRoleId = 5;
  string profile_image = 6;
}